--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,4 +1,5 @@
 /**
+Portfolio CSS
 * Template Name: MyPortfolio
 * Updated: Sep 18 2023 with Bootstrap v5.3.2
 * Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
