--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,10 +1,6 @@
 /**
-Portfolio CSS
-* Template Name: MyPortfolio
-* Updated: Sep 18 2023 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
+* Portfolio CSS
 * Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
 */
 
 /*--------------------------------------------------------------
